--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,33 +9,20 @@
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="350dp"
+        android:layout_height="345dp"
         android:background="#63BAE3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="0dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="16dp"
-        android:textAlignment="center"
-        android:textColor="#63B9E2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
         android:id="@+id/inputAltura"
         android:layout_width="129dp"
         android:layout_height="42dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="216dp"
         android:background="@drawable/edit_text_rounded_bg"
         android:ems="10"
         android:inputType="text"
@@ -44,13 +31,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Altura (cm)"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/inputAltura"
+        app:layout_constraintEnd_toEndOf="@+id/inputAltura"
+        app:layout_constraintHorizontal_bias="0.372"
+        app:layout_constraintStart_toStartOf="@+id/inputAltura" />
+
+    <EditText
+        android:id="@+id/idade"
+        android:layout_width="129dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="128dp"
+        android:background="@drawable/edit_text_rounded_bg"
+        android:ems="10"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Idade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Idade"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/idade"
+        app:layout_constraintEnd_toEndOf="@+id/idade"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="@+id/idade" />
 
     <EditText
         android:id="@+id/inputPeso"
         android:layout_width="129dp"
         android:layout_height="42dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="48dp"
         android:background="@drawable/edit_text_rounded_bg"
         android:ems="10"
         android:inputType="text"
@@ -59,11 +85,51 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Peso (Kg)"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/inputPeso"
+        app:layout_constraintEnd_toEndOf="@+id/inputPeso"
+        app:layout_constraintHorizontal_bias="0.597"
+        app:layout_constraintStart_toStartOf="@+id/inputPeso" />
+
+    <EditText
+        android:id="@+id/nome"
+        android:layout_width="129dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="128dp"
+        android:background="@drawable/edit_text_rounded_bg"
+        android:ems="10"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.198"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Nome"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/nome"
+        app:layout_constraintEnd_toEndOf="@+id/nome"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="@+id/nome" />
+
     <Button
         android:id="@+id/button"
         android:layout_width="314dp"
         android:layout_height="43dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="280dp"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="sans-serif"
         android:onClick="calcular"
@@ -81,7 +147,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:text="Cálculo do IMC"
         android:textColor="#FFFFFF"
@@ -96,47 +162,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="Descubra seu Índice de massa Corporal"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:text="Altura (cm)"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/inputAltura"
-        app:layout_constraintEnd_toEndOf="@+id/inputAltura"
-        app:layout_constraintStart_toStartOf="@+id/inputAltura" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:text="Peso (Kg)"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/inputPeso"
-        app:layout_constraintEnd_toEndOf="@+id/inputPeso"
-        app:layout_constraintStart_toStartOf="@+id/inputPeso" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Seu índice de massa corporal é:"
-        android:textColor="#63B9E2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -148,6 +180,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Seu índice de massa corporal é:"
+        android:textColor="#63B9E2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="0dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="12dp"
+        android:textAlignment="center"
+        android:textColor="#63B9E2"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
